Prism library - fixing Pre-line elements position on Safari by adding style line-height to Prism stylesheet

--- a/src/prism/prism-theme-k88hudson.css
+++ b/src/prism/prism-theme-k88hudson.css
@@ -123,6 +123,7 @@ pre[class*="language-"] {
 */
 pre[data-line] {
   position: relative;
+  line-height: inherit;
 }
 pre[class*="language-"] > code[class*="language-"] {
   position: relative;
@@ -140,4 +141,6 @@ pre[class*="language-"] > code[class*="language-"] {
   pointer-events: none;
   line-height: inherit;
   white-space: pre;
+  border: 1px solid violet;
+
 }
